--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -205,6 +205,14 @@
     <Compile Include="Migrations\201610041409408_init.Designer.cs">
       <DependentUpon>201610041409408_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610041415592_initial.cs" />
+    <Compile Include="Migrations\201610041415592_initial.Designer.cs">
+      <DependentUpon>201610041415592_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610041422087_initial1.cs" />
+    <Compile Include="Migrations\201610041422087_initial1.Designer.cs">
+      <DependentUpon>201610041422087_initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -290,6 +298,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201610041409408_init.resx">
       <DependentUpon>201610041409408_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610041415592_initial.resx">
+      <DependentUpon>201610041415592_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610041422087_initial1.resx">
+      <DependentUpon>201610041422087_initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
