--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -213,6 +213,10 @@
     <Compile Include="Migrations\201610041422087_initial1.Designer.cs">
       <DependentUpon>201610041422087_initial1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610041501459_updated address database values.cs" />
+    <Compile Include="Migrations\201610041501459_updated address database values.Designer.cs">
+      <DependentUpon>201610041501459_updated address database values.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -304,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610041422087_initial1.resx">
       <DependentUpon>201610041422087_initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610041501459_updated address database values.resx">
+      <DependentUpon>201610041501459_updated address database values.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
