--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -204,15 +204,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201610041427309_initial.cs" />
-    <Compile Include="Migrations\201610041427309_initial.Designer.cs">
-      <DependentUpon>201610041427309_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610041501459_updated address database values.cs" />
-    <Compile Include="Migrations\201610041501459_updated address database values.Designer.cs">
-      <DependentUpon>201610041501459_updated address database values.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -303,6 +294,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -311,14 +303,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201610041427309_initial.resx">
-      <DependentUpon>201610041427309_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610041501459_updated address database values.resx">
-      <DependentUpon>201610041501459_updated address database values.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
