added filewriter class and updated resume view

--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -332,6 +332,7 @@
     <Content Include="Views\Resumes\Details.cshtml" />
     <Content Include="Views\Resumes\Edit.cshtml" />
     <Content Include="Views\Resumes\Index.cshtml" />
+    <Content Include="Views\Resumes\TestView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
