--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -223,6 +223,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AddressesController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -230,22 +231,6 @@
     <Compile Include="FileWriter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610041516210_changing datatypes for variables.cs" />
-    <Compile Include="Migrations\201610041516210_changing datatypes for variables.Designer.cs">
-      <DependentUpon>201610041516210_changing datatypes for variables.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610051229216_day3.cs" />
-    <Compile Include="Migrations\201610051229216_day3.Designer.cs">
-      <DependentUpon>201610051229216_day3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610051437355_added posting date to job model.cs" />
-    <Compile Include="Migrations\201610051437355_added posting date to job model.Designer.cs">
-      <DependentUpon>201610051437355_added posting date to job model.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610052029450_update to resume table.cs" />
-    <Compile Include="Migrations\201610052029450_update to resume table.Designer.cs">
-      <DependentUpon>201610052029450_update to resume table.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201610061927367_update.cs" />
     <Compile Include="Migrations\201610061927367_update.Designer.cs">
@@ -270,11 +255,13 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="GoogleMaps.LocationServices.readme.txt" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -288,6 +275,8 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
+    <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -352,6 +341,11 @@
     <Content Include="Views\Resumes\Edit.cshtml" />
     <Content Include="Views\Resumes\Index.cshtml" />
     <Content Include="Views\Resumes\TestView.cshtml" />
+    <Content Include="Views\Events\Create.cshtml" />
+    <Content Include="Views\Events\Delete.cshtml" />
+    <Content Include="Views\Events\Details.cshtml" />
+    <Content Include="Views\Events\Edit.cshtml" />
+    <Content Include="Views\Events\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -365,18 +359,6 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201610041516210_changing datatypes for variables.resx">
-      <DependentUpon>201610041516210_changing datatypes for variables.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610051229216_day3.resx">
-      <DependentUpon>201610051229216_day3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610051437355_added posting date to job model.resx">
-      <DependentUpon>201610051437355_added posting date to job model.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610052029450_update to resume table.resx">
-      <DependentUpon>201610052029450_update to resume table.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610061927367_update.resx">
       <DependentUpon>201610061927367_update.cs</DependentUpon>
     </EmbeddedResource>
