--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -254,8 +254,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\coffee-cup-desk-pen.jpg" />
     <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.min.css" />
+    <Content Include="Content\numbers-time-watch-white.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
