--- a/EmployableApp/EmployableApp.csproj
+++ b/EmployableApp/EmployableApp.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Models\ResumesViewModels.cs" />
     <Compile Include="Models\StringToDateConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendEmail.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Survey.cs" />
   </ItemGroup>
